tests222/tests2/test364.out
lli: <stdin>:1:1: error: expected top-level entity
line 12: syntax error
^
